fix background images not showing in safari

--- a/static/sass/components/_hero.scss
+++ b/static/sass/components/_hero.scss
@@ -6,7 +6,7 @@
 .section-hero {
   padding               : rem(80) 0;
   background-size       : cover;
-  background-image      : url('../img/bg_palms.webp');
+  background-image      : url('../img/bg_palms.jpg'), url('../img/bg_palms.webp');
   background-color      : $blacktop; 
   background-repeat     : no-repeat;
   background-position   : center top;
