--- a/static/sass/components/_testimonials.scss
+++ b/static/sass/components/_testimonials.scss
@@ -7,7 +7,7 @@
 	color                 : $white;
   background-size       : cover;
   background-color      : $blacktop;
-  background-image      : url(../img/bg_shades.webp);
+  background-image      : url(../img/bg_shades.jpg), url(../img/bg_shades.webp);
   background-repeat     : no-repeat;
   background-position   : center 10%;
   background-attachment : fixed;
